Somehow I forgot just how bad GuiEditTaskReputation was, even with how bad I remembered it being. It should work properly now.
(cherry picked from commit 596ed05702acb8a0a8d887c59c3ab33e0e472a5c)